--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -20,7 +20,8 @@ on:
         required: false
         default: 'false'
   schedule:
-    - cron: 0 14 * * *
+    - cron: 0 16 * * *
+  #  每天晚上凌晨0点自动编译.    
   #  watch:
   #    types: started
   #  - cron: 0 8 */5 * *
