--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -12,14 +12,9 @@
 # Description: Source code update checker
 #============================================================
 
-name: Update Checker
-
-env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+name: Remove old artifacts
 
 on:
-  workflow_dispatch:
   schedule:
     - cron: 0 14 * * fri
   #  每周五晚上 22 点自动编译。
@@ -31,34 +26,18 @@ on:
   #  - cron: 0 20 * * fri
   #  每周五凌晨四点自动编译。
 jobs:
-  check:
+  remove-old-artifacts:
     runs-on: ubuntu-latest
+    timeout-minutes: 3600
 
     steps:
-
-    - name: Get Commit Hash
-      id: getHash
-      run: |
-        git clone --depth 1 $REPO_URL -b $REPO_BRANCH .
-        echo "::set-output name=commitHash::$(git rev-parse HEAD)"
-    - name: Compare Commit Hash
-      id: cacheHash
-      uses: actions/cache@v2
-      with:
-        path: .commitHash
-        key: HEAD-${{ steps.getHash.outputs.commitHash }}
-
-    - name: Save New Commit Hash
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      run: |
-        echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
-    - name: Trigger build
-      if: steps.cacheHash.outputs.cache-hit != 'true'
-      uses: peter-evans/repository-dispatch@v1
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        event-type: Source Code Update
-
+    #- name: Remove old artifacts
+    #  uses: c-hive/gha-remove-artifacts@v1
+    #  with:
+    #     age: '1 month'
+         #Optional inputs
+         #skip-tags: true
+         #skip-recent: 5
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
