--- a/.github/workflows/X86_64.yml
+++ b/.github/workflows/X86_64.yml
@@ -9,7 +9,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: x86_64
+name: X86_64
 
 on:
   repository_dispatch:
