--- a/config/hc5962.config
+++ b/config/hc5962.config
@@ -4871,6 +4871,9 @@ CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 # CONFIG_PACKAGE_luci-theme-netgear is not set
 # CONFIG_PACKAGE_luci-theme-opentomato is not set
 CONFIG_PACKAGE_luci-theme-opentomcat=y
+CONFIG_PACKAGE_luci-theme-opentopd=y
+CONFIG_PACKAGE_luci-theme-btmod=y
+CONFIG_PACKAGE_luci-theme-opentoks=y
 # CONFIG_PACKAGE_luci-theme-opentopd is not set
 # CONFIG_PACKAGE_luci-theme-rosy is not set
 # end of 4. Themes
