--- a/config/hc5962.config
+++ b/config/hc5962.config
@@ -4854,6 +4854,7 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
+CONFIG_PACKAGE_luci-app-go-aliyundrive-webdav=y
 # end of 3. Applications
 
 #
