--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -15,8 +15,8 @@
 name: Remove old artifacts
 
 on:
-  workflow_dispatch:
-  schedule:
+  #workflow_dispatch:
+  #schedule:
   #  - cron: 0 14 * * *
   #  每天晚上 22 点自动编译。
   #  watch:
