--- a/.github/workflows/XIAOMi_AX3600.yml
+++ b/.github/workflows/XIAOMi_AX3600.yml
@@ -16,8 +16,8 @@ on:
     inputs:
       ssh:
         description: 'SSH connection to Actions'
-        required: false
-        default: 'false'      
+        required: true
+        default: 'true'      
   schedule:
     - cron: 0 16 * * *
   #  每天晚上凌晨0点自动编译.
